--- a/src/drumee/builtins/widget/chat-item/skin/reply-message.scss
+++ b/src/drumee/builtins/widget/chat-item/skin/reply-message.scss
@@ -1,6 +1,6 @@
 &-reply {
   &__main {
-    background-color: $dgc-chat-reply-bg;
+    background-color: var(--dgc-chat-reply-bg);
     border-radius: 2px 4px 4px 2px;
     height: auto;
     min-width: 100px;
@@ -44,10 +44,10 @@
         word-wrap: break-word;
   
         & a {
-          color: $dgc-secondary-text-color;
+          color: var(--secondary-text-color);
   
           &:hover{
-            color: $dgc-chat-hover; 
+            color: var(--dgc-chat-hover); 
           }
         }
       }
