--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -2,10 +2,10 @@
 @import 'core';
 @import 'team';
 @import 'account';
-@import 'admin';
-@import 'editbox';
-@import 'addressbook';
-@import 'bigchat';
+// @import 'admin';
+// @import 'editbox';
+// @import 'addressbook';
+// @import 'bigchat';
 // @import 'channel';
 // @import 'filter';
 // @import 'folder';
