--- a/src/drumee/builtins/window/addressbook/skin/overlay-wrapper.scss
+++ b/src/drumee/builtins/window/addressbook/skin/overlay-wrapper.scss
@@ -6,7 +6,7 @@
   
   & .overlay {
     border-radius:0 6px;
-    background: $ab-transparency-container-overlay;
+    background: var(--transparency-container-overlay);
     height: 100%;
     position: absolute;
     width: 100%;
@@ -25,7 +25,7 @@
   & .window-addressbook {
     &__main {
       border-radius:$default-border-radius;//$default-border-radius-bottom;
-      background: $ab-default-background;  
+      background: var(--default-background);  
       height: 100%;
       max-height: 330px;
       max-width: 550px;
@@ -49,7 +49,7 @@
   
     &__icon {
       &.icon_success {
-        color: $ab-default-icon-success;
+        color: var(--default-icon-success);
         height: 26px;
         margin: 25px auto auto;// auto;
         width: 36px;
@@ -57,7 +57,7 @@
     }
   
     &__note {
-      @include typo($size: 18px, $weight: 300, $line: 26px, $color: $ab-default-text-color);
+      @include typo($size: 18px, $weight: 300, $line: 26px, $color: var(--default-text-color));
   
       &.input-content {
         color: var(--eblue);
