--- a/src/drumee/builtins/window/addressbook/widget/search/skin/index.scss
+++ b/src/drumee/builtins/window/addressbook/widget/search/skin/index.scss
@@ -7,7 +7,7 @@
 
 .addressbook-widget-search {
   &__ui {
-    background-color: $ab-default-background;
+    background-color: var(--default-background);
     border-radius:var(--border-radius);
     box-shadow: var(--shadow-container);
     font-family: $roboto,sans-serif;
@@ -33,13 +33,13 @@
   }
 
   &__title {
-    @include typo($size: 14px, $line: 14px, $weight:300,$color:$ab-default-text-title);
+    @include typo($size: 14px, $line: 14px, $weight:300,$color: var(--default-text-title));
     margin: 5px auto;
     padding-top: 10px;
   }
 
   &__icon {
-    color : $ab-default-icon-neutral;
+    color : var(--default-icon-neutral);
     cursor: pointer;
     height  : 11px;
     margin: 10px 10px 0px 0px;
@@ -48,22 +48,22 @@
     width: 11px;
 
     &:hover {
-      color:$ab-default-icon-hover;
+      color:var(--default-icon-hover);
     }
 
     &.close-icon {
-      color: $ab-default-thinline-icon;
+      color: var(--default-thinline-icon);
       margin: 0px -2px 0 0;
 
       &:hover {
-        color:$ab-default-thinline-icon-hover;
+        color:var(--default-thinline-icon-hover);
       }
     }
   }
   
   & .contact-item {
     &__name {
-      @include typo( $size :13px, $line: 16px, $color:$ab-default-text-color);
+      @include typo( $size :13px, $line: 16px, $color: var(--default-text-color));
       letter-spacing: 0;
       margin-left: 8px;
       margin-top: 5px;
@@ -85,7 +85,7 @@
       }
       
       svg {
-        fill: $ab-default-user-icon;
+        fill: var(--default-user-icon);
       }
     }
   }
