--- a/src/drumee/builtins/window/bigchat/skin/breadcrumbs.scss
+++ b/src/drumee/builtins/window/bigchat/skin/breadcrumbs.scss
@@ -39,13 +39,13 @@
   }
 
   &__icon {
-    background-color:$bigchat-default-icon-neutral;
+    background-color:var(--default-icon-neutral);
     opacity:0.75;
-    color: $bigchat-default-icon-reverse;
+    color: var(--default-icon-reverse);
     cursor: pointer;
     margin:0px 2px;    
     &:hover{
-      background-color: $bigchat-default-background-hover;
+      background-color: var(--default-background-hover);
       opacity:  1;
     }
     &.breadcrumb-icon {
@@ -69,7 +69,7 @@
     padding: 5px 15px;
     white-space: nowrap;
     width: 100%;
-    @include typo($size: 14px, $line: 18px, $weight: 300, $color:$bigchat-default-text-color); 
+    @include typo($size: 14px, $line: 18px, $weight: 300, $color: var(--default-text-color)); 
     @include overflow-text;
 
     &:last-child {
@@ -78,7 +78,7 @@
   }
 
   &__roll {
-    background: $bigchat-default-background;
+    background: var(--default-background);
     border-radius: $border-radius-small; 
     box-shadow:$drumee-container-dropdown;
     height: auto;
@@ -91,7 +91,7 @@
     z-index: 1000;
     
     &:before {
-      background-color: $bigchat-default-background;
+      background-color: var(--default-background);
       box-shadow:var(--shadow-before);
       content: "";
       height: 10px;
@@ -103,7 +103,7 @@
     }
 
     &:after {
-      background: $bigchat-default-background;
+      background: var(--default-background);
       border-radius: $default-border-radius-top;
       content: "";
       height: 10px;
