--- a/src/drumee/builtins/window/bigchat/skin/layout.scss
+++ b/src/drumee/builtins/window/bigchat/skin/layout.scss
@@ -1,6 +1,6 @@
 .window-bigchat {
   & .widget_tag {
-    background: $bigchat-default-background;
+    background: var(--default-background);
     height: 100%;
     min-width: 205px;//186px;
     overflow-y: hidden;
@@ -10,7 +10,7 @@
 
   & .contact-wrapper {
     min-width: 255px;
-    background-color: $bigchat-default-block-background;
+    background-color: var(--default-block-background);
     max-width: 255px;
   }
 
@@ -89,7 +89,7 @@
       }
 
       .tags-list {
-        background: $bigchat-default-block-background;
+        background: var(--default-block-background);
         display: flex;
         flex: 2;
         height: 100%;
