--- a/src/drumee/builtins/window/bigchat/widget/chatcontact-list/skin/index.scss
+++ b/src/drumee/builtins/window/bigchat/widget/chatcontact-list/skin/index.scss
@@ -2,7 +2,7 @@
 
 .widget-chatcontactList {
 	&__ui{
-		background-color: $bigchat-default-block-background;
+		background-color: var(--default-block-background);
 		width: calc(100% - 0px);
 	}
 	
@@ -28,7 +28,7 @@
 		justify-content: center;
 		
 		&__title {			
-			@include typo($size: 15px, $line: 16px, $color: $bigchat-text-title);
+			@include typo($size: 15px, $line: 16px, $color: var(--bigchat-default-text-title));
 			padding-bottom: 8px;
 			padding-top: 6px;
 
@@ -46,13 +46,13 @@
 			right: 0;
 				
 			& svg {
-				fill :$bigchat-default-icon-neutral;
+				fill :var(--default-icon-neutral);
 			}
 		}
 	}
 
 	&__separator {
-		background-color: $bigchat-default-separator;
+		background-color: var(--default-separator);
 		border-radius: 1px;
 		height: 1px;
 		margin: 3px 0 0px 0;
@@ -73,7 +73,7 @@
 		
 		&__icon {
 			& svg {
-				fill : $bigchat-default-user-icon ;
+				fill : var(--default-user-icon);
 				height: 29px;
 				width: 29px;
 			}
@@ -82,7 +82,7 @@
 		&__name {			
 			margin-top: 4px;
 			padding: 3px 3px 3px 15px;
-			@include typo($size: 14px, $line: 16px, $color:$bigchat-default-text-color);
+			@include typo($size: 14px, $line: 16px, $color: var(--default-text-color));
 			@include overflow-text;
 			.inner{
 				overflow: hidden;
