--- a/src/drumee/builtins/window/litechat/message/skin/reply-message.scss
+++ b/src/drumee/builtins/window/litechat/message/skin/reply-message.scss
@@ -1,6 +1,6 @@
 &-reply {
   &__main {
-    background-color: $dgc-chat-reply-bg;
+    background-color: var(--dgc-chat-reply-bg);
     border-radius: 2px 4px 4px 2px;
     height: 100%;
     min-width: 100px;
@@ -46,7 +46,7 @@
           color: var(--eblue);
   
           &:hover{
-            color: $dgc-chat-hover; 
+            color: var(--dgc-chat-hover); 
           }
         }
       }
