--- a/src/drumee/builtins/window/litechat/skin/reply-message.scss
+++ b/src/drumee/builtins/window/litechat/skin/reply-message.scss
@@ -11,7 +11,7 @@
   }
 
   &__main {
-    background-color: $dgc-chat-reply-bg;
+    background-color: var(--dgc-chat-reply-bg);
     border-radius: 2px 4px 4px 2px;
     height: 100%;
     min-height: 55px;
@@ -57,7 +57,7 @@
           color: var(--eblue);
   
           &:hover{
-            color: $dgc-chat-hover; 
+            color: var(--dgc-chat-hover); 
           }
         }
       }
