--- a/src/drumee/builtins/window/supportticket/skin/breadcrumbs.scss
+++ b/src/drumee/builtins/window/supportticket/skin/breadcrumbs.scss
@@ -39,13 +39,13 @@
   }
 
   &__icon {
-    background-color:$bigchat-default-icon-neutral;
+    background-color:var(--default-icon-neutral);
     opacity:0.75;
-    color: $bigchat-default-icon-reverse;
+    color: var(--default-icon-reverse);
     cursor: pointer;
     margin:0px 2px;
     &:hover{
-      background-color: $bigchat-default-background-hover;
+      background-color: var(--default-background-hover);
       opacity:  1;
     }
     
@@ -68,7 +68,7 @@
     padding: 5px 15px;
     white-space: nowrap;
     width: 100%;
-    @include typo($size: 14px, $line: 18px, $weight: 300, $color:$bigchat-default-text-color); //var(--egrey-49));
+    @include typo($size: 14px, $line: 18px, $weight: 300, $color: var(--default-text-color)); //var(--egrey-49));
     @include overflow-text;
 
     &:last-child {
@@ -77,7 +77,7 @@
   }
 
   &__roll {
-    background: $bigchat-default-background;
+    background: var(--default-background);
     border-radius: $border-radius-small; //4px;
     box-shadow:$drumee-container-dropdown;// 0 6px 10px 1px rgba(63,79,117,0.13), 0 7px 20px 0 rgba(86,65,113,0.08), 0 3px 17px 0 rgba(194,185,203,0);
     height: auto;
@@ -90,7 +90,7 @@
     z-index: 1000;
     
     &:before {
-      background-color: $bigchat-default-background;
+      background-color: var(--default-background);
       box-shadow:var(--shadow-before);// 0 -2px 8px 1px rgba(63, 79, 117, 0.13), 0 5px 12px 0 rgba(86, 65, 113, 0.08), 0 -2px 4px 0 rgba(194, 185, 203, 0);
       content: "";
       height: 10px;
@@ -102,7 +102,7 @@
     }
 
     &:after {
-      background: $bigchat-default-background;
+      background: var(--default-background);
       border-radius: $default-border-radius-top;
       content: "";
       height: 10px;
