--- a/src/drumee/builtins/window/supportticket/skin/index.scss
+++ b/src/drumee/builtins/window/supportticket/skin/index.scss
@@ -25,7 +25,7 @@
   }
 
   &__main {
-    background-color: $bigchat-default-background;
+    background-color: var(--default-background);
   }
   
   &__container {
@@ -46,7 +46,7 @@
   }
 
   &__header {
-    background-color: $bigchat-background-header ;
+    background-color: var(--bigchat-header-bg);
     border-bottom: none;
   }
 
@@ -69,14 +69,14 @@
 
       & .title {
         align-items: center;
-        @include typo($size: 18px, $line: 16px, $color: $bigchat-default-text-reverse);
+        @include typo($size: 18px, $line: 16px, $color: var(--default-text-reverse));
       }
 
     }
 
     &__icon {
       &.breadcrumb-icon {
-        color: $bigchat-default-icon-reverse;
+        color: var(--default-icon-reverse);
         height: 22px;
         margin-top: 10px;
         padding: 3px;
@@ -90,11 +90,11 @@
     height: 100%;
     width: 100%;
     & .tags-list {
-      background: $bigchat-default-block-background;
+      background: var(--default-block-background);
       border-radius: $default-border-radius-left;
     }
     .widget-tag__note.title{
-    color: $bigchat-text-title;
+    color: var(--bigchat-default-text-title);
     }
   }
 
@@ -115,17 +115,17 @@
     padding-top: 5px;
     margin: 1px .5px 0 0;
     height: 35px;
-    @include typo($size: 14px, $line: 16px, $color: $bigchat-special-share-room-color);//$dgc-share-room);
+    @include typo($size: 14px, $line: 16px, $color: var(--bigchat-special-share-room-color));//$dgc-share-room);
 
     &[data-active="active"],
     &[data-radio="on"],
     &:hover {
-      background: $bigchat-default-background-hover;
+      background: var(--default-background-hover);
       // border-radius: 2px;
-      color	: $bigchat-default-text-hover  !important;
+      color	: var(--default-text-hover)  !important;
 
       & .addressbook-widget-tag-item__container {
-        color	: $bigchat-default-text-hover !important;
+        color	: var(--default-text-hover) !important;
       }
       & .addressbook-widget-tag-item__name{
         @include overflow-text;
@@ -137,17 +137,17 @@
     }
   }
   &.adressbook-widget-tag__note.title {
-    @include typo($size: 15px, $line: 16px, $color: $bigchat-text-title);
+    @include typo($size: 15px, $line: 16px, $color: var(--bigchat-default-text-title));
   }
 
   &__separator {
-    background: $bigchat-default-separator;
+    background: var(--default-separator);
     height: 1px; //2px;
     margin: 3px 0 0;
   }
 
   &__max-content {
-    background:$bigchat-default-background;
+    background:var(--default-background);
     height: 100%;
     justify-content: center;
     overflow: hidden;
@@ -173,7 +173,7 @@
     }
 
     &__note {
-      @include typo($size: 16px, $line: 30px, $color:$bigchat-tertiary-text-color); //$weight:300,
+      @include typo($size: 16px, $line: 30px, $color: var(--tertiary-text-color)); //$weight:300,
       height: 100%;
       justify-content: center;
       min-width: 35px; //56px; //80px; //120px;
@@ -191,9 +191,9 @@
     &__icon {
       &.no-discussion-icon {
         border-radius:$border-radius-small;
-        border: 1px solid $bigchat-border-no-discussion;
+        border: 1px solid var(--border-no-discussion);
         box-sizing: border-box;
-        color: $bigchat-default-icon-neutral ;
+        color: var(--default-icon-neutral);
         height:25px;// 30px;
         margin:2px 5px 0 5px;//0px 10px;
         padding: 5px;//7px;
