--- a/src/drumee/builtins/window/supportticket/skin/menu.scss
+++ b/src/drumee/builtins/window/supportticket/skin/menu.scss
@@ -9,19 +9,19 @@
 
     &[data-state="1"] {
       & .menu-trigger {
-        background-color: $bigchat-default-background;
+        background-color: var(--default-background);
         border-radius:$default-border-radius;
       }
 
       & .dropdown-toggle-icon {
-        color: $bigchat-background-header ;//var(--egreen);
+        color: var(--bigchat-header-bg);//var(--egreen);
       }
     }
 
     & .menu-topic-items {
       border-radius:$default-border-radius;
       box-shadow: var(--shadow-container);
-      background-color: $bigchat-default-background;
+      background-color: var(--default-background);
       width: 285px;
       padding-bottom: 10px;
       &__wrapper{
@@ -30,7 +30,7 @@
         padding:10px;
       }
       &:before {
-        background-color: $bigchat-default-background;
+        background-color: var(--default-background);
         //box-shadow:var(--shadow-before);
         content: "";
         height: 10px;
@@ -42,7 +42,7 @@
       }
 
       &:after {
-        background: $bigchat-default-background;
+        background: var(--default-background);
         content: "";
         height: 10px;
         left: 0;
@@ -58,13 +58,13 @@
     width : 16px;
     
     &.dropdown-toggle-icon {
-      color: $bigchat-default-icon-reverse;
+      color: var(--default-icon-reverse);
       cursor: pointer;
       height: 24px;
       padding: 2.5px; //5px;
       width: 24px;
       &:hover{
-        color: $bigchat-default-icon-hover ;
+        color: var(--default-icon-hover);
       }
     }
 
@@ -73,7 +73,7 @@
       margin-top: 10px;
 
       & svg {
-        fill: $bigchat-default-icon-menu-dropdown;//var(--eviolet);
+        fill: var(--default-icon-menu-dropdown);//var(--eviolet);
       }
 
       &.contactbook{
@@ -92,15 +92,15 @@
     padding:6px 20px;//10px 20px;
 
     &:hover {
-      background-color: $bigchat-default-background-hover ;
-      color : $bigchat-default-text-hover ;
+      background-color: var(--default-background-hover);
+      color : var(--default-text-hover);
 
       & .window-support-ticket-menu__name{
-        color:$bigchat-default-text-hover; 
+        color:var(--default-text-hover); 
       }
       
       & svg {
-        fill: $bigchat-default-icon-reverse;   
+        fill: var(--default-icon-reverse);   
       }
     }
   }
@@ -108,7 +108,7 @@
   &__name {    
     padding-top: 2px;
     padding-left: 8px;
-    @include typo($size:14px, $weight: 300, $line:16px, $color: $bigchat-default-text-color);
+    @include typo($size:14px, $weight: 300, $line:16px, $color: var(--default-text-color));
     &.invitation{
       margin-top: 10px;
     }
