--- a/src/drumee/builtins/window/supportticket/widget/support-tickets/skin/filter-menu.scss
+++ b/src/drumee/builtins/window/supportticket/widget/support-tickets/skin/filter-menu.scss
@@ -2,12 +2,12 @@
   &__wrapper {
     &[data-state="1"] {
       & .trigger-icon {
-        color: $bigchat-default-icon-active;
+        color: var(--default-icon-active);
       }
     }
 
     & .menu-topic-items {
-      background-color: $bigchat-default-background;
+      background-color: var(--default-background);
       box-shadow:$drumee-container-dropdown;
       border-radius:$default-border-radius;
       max-width: 202px;
@@ -21,7 +21,7 @@
       } 
 
       &:before {
-        background-color: $bigchat-default-background;
+        background-color: var(--default-background);
         box-shadow:var(--shadow-container);
         content: "";
         height: 10px;
@@ -33,7 +33,7 @@
       }
 
       &:after {
-        background: $bigchat-default-background;
+        background: var(--default-background);
         border-radius:$default-border-radius-top;
         content: "";
         height: 10px;
@@ -51,7 +51,7 @@
     &.trigger-icon {
       align-items: center;
       box-sizing: border-box;
-      color: $bigchat-default-icon-neutral ;
+      color: var(--default-icon-neutral);
       height: 12px;
       right: 25px;
       top: 12px;
@@ -64,7 +64,7 @@
       
       svg {
         &:hover {
-          color:$bigchat-default-icon-hover ;
+          color:var(--default-icon-hover);
           opacity: 1;
         }
       }
@@ -72,15 +72,15 @@
     
     &.checkbox {
       border-radius: $default-checkbox-border-radius;
-      border:1px solid $bigchat-default-checkbox-border;//$default-checkbox;
+      border:1px solid var(--default-checkbox-border);//$default-checkbox;
       box-shadow: none;
-      color: $bigchat-default-checkbox-background;//$default-background;
+      color: var(--default-checkbox-background);//$default-background;
       height: 14px;
       width: 14px;
       background:white;
 
       &[data-state="1"] {
-        border: 1px solid $bigchat-default-checkbox-border;//$default-checkbox;
+        border: 1px solid var(--default-checkbox-border);//$default-checkbox;
         box-shadow: none;
         color: var(--default-checkbox-checked);// $checkbox-active;
       }
@@ -99,15 +99,15 @@
     height: 24px;
 
     &:hover {
-      background-color: $bigchat-default-background-hover ;  
-      color : $bigchat-default-text-hover ;
+      background-color: var(--default-background-hover);  
+      color : var(--default-text-hover);
       & .menu-item {
-        color: $bigchat-default-text-hover ;
+        color: var(--default-text-hover);
       }
 
       .checkbox[data-state="1"] {
         box-shadow: none;
-        border: 1px solid $bigchat-checkbox-checked-border-reverse;
+        border: 1px solid var(--checkbox-checked-border-reverse);
         border-radius:$default-checkbox-border-radius;
       }
     }
@@ -116,14 +116,14 @@
   &__note {    
     padding-top: 0px;
     bottom: 2px;
-    @include typo($size: 12px, $weight: 300, $line: 14px, $color:$bigchat-default-text-color);
+    @include typo($size: 12px, $weight: 300, $line: 14px, $color: var(--default-text-color));
 
     &.title {     
       align-items: center;
       height: 20px;
       justify-content: center;
       margin-top: 10px;
-      @include typo($size: 14px, $weight: 300, $line: 14px, $color:$bigchat-default-text-title);
+      @include typo($size: 14px, $weight: 300, $line: 14px, $color: var(--default-text-title));
     }
 
     &.menu-item {
