--- a/src/drumee/builtins/window/website/skin/index.scss
+++ b/src/drumee/builtins/window/website/skin/index.scss
@@ -20,7 +20,7 @@
       max-height: calc(100% - 43px);
       width: 100%;
       height: 100%;
-      background-color: $dgc-overlay-background; //rgba(22,22,22, 0.2);
+      background-color: var(--transparency-container-overlay); //rgba(22,22,22, 0.2);
       left: 0;
       top: 44px;
     }
