--- a/src/drumee/libs/reader/profile/skin/index.scss
+++ b/src/drumee/libs/reader/profile/skin/index.scss
@@ -26,7 +26,7 @@
 
     &[data-online="1"],&[data-online="2"] {
       &:before {
-        background-color: $ab-contact-online-color;
+        background-color: var(--contact-online-color);
         border-radius: 50%;
         box-shadow: 0 0 0 1px var(--white);
         content: " ";
